--- a/note/10.md
+++ b/note/10.md
@@ -35,7 +35,7 @@ public class test01 {
 ```
 
 #### Statement接口 (用于执行静态sql语句并返回它所生成结果的对象)
-> userinfo表的shema文件
+> userinfo.sql (测试表userinfo)
 ```mysql
 CREATE DATABASE IF NOT EXISTS jdbcTest DEFAULT CHARSET utf8 COLLATE utf8_general_ci;
 USE jdbcTest;
@@ -47,6 +47,7 @@ CREATE TABLE userinfo (
 DEFAULT CHARSET utf8;
 ```
 * Statement (sql未预编译,容易引起sql注入)
+> eg:
 ```java
 /**
  * Created by Echo
@@ -76,6 +77,7 @@ public class test02 {
 }
 ```
 * PreparedStatement (sql语句预编译, 防止sql注入)
+> eg:
 ```java
 /**
  * Created by Echo
