--- a/note/10.md
+++ b/note/10.md
@@ -62,7 +62,7 @@ public class test02 {
 
             Statement stmt = conn.createStatement();
 
-            String sql = "INSERT INTO userinfo (username, age) VALUES ('老王', 18);";
+            String sql = "INSERT INTO userinfo (username, age) VALUES ('老王', 18)";
             stmt.execute(sql);
             // 测试SQL注入
             // String id = "5 or 1=1";
