--- a/note/6.md
+++ b/note/6.md
@@ -22,7 +22,7 @@
 物理+数据链路层(数据链路层、物理层)
 ```
 #### 一. java中相关类
-* InetAddress (封装计算机的ip地址和DNS, 没有端口号)
+* InetAddress (封装计算机的ip地址和DNS, 没有端口号)
 ```java
 /**
 没有封装端口号
