--- a/note/7.md
+++ b/note/7.md
@@ -7,6 +7,7 @@
 #### 常用内置注解
 * @Override
 > 此注解只适用于修饰方法，表示一个方法声明打算重写父类中的另一个方法的声明
+
 > eg:
 ```java
 public class Demo1 /* extends Object */ {
@@ -19,6 +20,7 @@ public class Demo1 /* extends Object */ {
 ```
 * @Deprecated
 > 此注解可用于修饰方法、属性、类，表示不鼓励使用这样的元素，通常是因为它很危险或存在更好的选择
+
 > eg:
 ```java
 public class Demo2 {
@@ -56,9 +58,9 @@ public class Demo3 {
     * @Target (用于描述注解的使用范围，即被描述的注解可以用在什么地方)
         |取值ElementType|修饰范围|
         |--|--|
-        |PACKAGE|package包|
-        |TYPE|类、接口、枚举、Annotation类型|
-        |CONSTRUCTOR:用于描述构造器,FIELD:用于描述域,METHOD:用于描述方法|类型成员(方法、构造方法、成员变量、枚举值)|
+        |PACKAGE|package包|
+        |TYPE|类、接口、枚举、Annotation类型|
+        |CONSTRUCTOR:用于描述构造器,FIELD:用于描述域,METHOD:用于描述方法|类型成员(方法、构造方法、成员变量、枚举值)|
         |LOCAL_VARIABLE:用于描述局部变量,PARAMETER:用于描述参数|方法参数和本地变量|
     * @Retention (表示需要在什么级别保存该注释信息，用于描述注解的生命周期)
         |取值|作用|
@@ -73,13 +75,13 @@ public class Demo3 {
 ```java
 // @Target(value={ElementType.METHOD,ElementType.TYPE}) 
 @Target(value=ElementType.METHOD) //修饰方法
-@Retention(RetentionPolicy.RUNTIME);
+@Retention(RetentionPolicy.RUNTIME);
 public @interface MyAnnotation01 {
     // 参数类型－参数名 默认值
-    String userName() default "";
-    int age() default 0; // －1 表示不存在的含义
+    String userName() default "";
+    int age() default 0; // －1 表示不存在的含义
 
-    String[] schools() default {"huawei", "ali"};
+    String[] schools() default {"huawei", "ali"};
 }
 
 public class Demo2 {
@@ -93,9 +95,9 @@ public class Demo2 {
 > eg1:
 ```java
 @Target(value=ElementType.METHOD) //修饰方法
-@Retention(RetentionPolicy.RUNTIME);
+@Retention(RetentionPolicy.RUNTIME);
 public @interface MyAnnotation02 {
-    // 一般注解定义只有一个值时, 默认参数名为value();
+    // 一般注解定义只有一个值时, 默认参数名为value();
     String value();
 }
 ```
