--- a/note/3.md
+++ b/note/3.md
@@ -3,7 +3,7 @@
 
 ![](../img/0301.png)
 
-1. Collection接口:定义了存取一组对象的方法,其子接口Set和List分别定义了存储方式
+1. Collection接口:定义了存取一组对象的方法,其子接口Set和List分别定义了存储方式
     * List中的数据对象有顺序且可以重复
     * Set中的数据对象没有顺序且不可以重复
 
