--- a/note/10.md
+++ b/note/10.md
@@ -1,7 +1,7 @@
 ## JDBC (Java Database Connection)
 > 为java开发者使用数据库提供了统一的编程接口
 
-> 开发步骤: 加载驱动 -> 连接数据库 -> 发送sql语句 -> 获得结果集
+> 开发步骤: 加载驱动 -> 连接数据库 -> 发送sql语句 -> 获得结果集 --> 关闭连接
 
 #### Connection接口 (用于建立数据库连接)
 > eg:
@@ -108,4 +108,131 @@ public class test03 {
     }
 }
 ```
+#### ResultSet接口
+> eg: ResultSet结果集用法（游标原理、关闭连接）
+```java
+/**
+ * Created by Echo
+ * ResultSet结果集用法（游标原理、关闭连接）
+ */
+public class test04 {
+
+    public static void main(String[] args) {
+        Connection conn = null;
+        PreparedStatement ps = null;
+        ResultSet resultSet = null;
+        try {
+            Class.forName("com.mysql.jdbc.Driver");
+            conn = DriverManager.getConnection("jdbc:mysql://localhost:3306/jdbcTest?useUnicode=true&characterEncoding=UTF-8", "root", "root");
+
+            String sql = "SELECT id, username FROM userinfo WHERE id > ?";
+            ps = conn.prepareStatement(sql);
+
+            ps.setObject(1, 2); // 返回id大于2的
+            // 返回结果集
+            resultSet = ps.executeQuery();
+
+            while (resultSet.next()) { // 移动游标 判断是否有下一个
+                // 打印结果集
+                System.out.println(resultSet.getInt(1) + "---" + resultSet.getString(2));
+            }
+
+        } catch (ClassNotFoundException e) {
+            e.printStackTrace();
+        } catch (SQLException e) {
+            e.printStackTrace();
+        } finally {
+            // 关闭连接, 后开的先关
+            if (resultSet != null) {
+                try {
+                    resultSet.close();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            }
+            if (ps != null) {
+                try {
+                    ps.close();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            }
+            if (conn != null) {
+                try {
+                    conn.close();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
+    }
+}
+```
+#### JDBC中的批处理
+> 使用批处理Batch插入2万条数据 (1. 设置事务手动提交) 2. 尽量使用Statement [prepareStatement预编译空间的问题可能会出问题]
+
+```java
+/**
+ * Created by Echo
+ * 使用批处理Batch（测试插入2万条数据）
+ */
+public class test05 {
+
+    public static void main(String[] args) {
+        Connection conn = null;
+        Statement stmt = null;
+        ResultSet resultSet = null;
+        try {
+            Class.forName("com.mysql.jdbc.Driver");
+            conn = DriverManager.getConnection("jdbc:mysql://localhost:3306/jdbcTest?useUnicode=true&characterEncoding=UTF-8", "root", "root");
+
+            // 1. 设置事务手动提交
+            conn.setAutoCommit(false);
+            long startTime = System.currentTimeMillis();
+            // 2. 尽量使用Statement (prepareStatement预编译空间的问题可能会出问题)
+            stmt = conn.createStatement();
+            // 一次性插入两万条数据
+            for (int i = 0; i < 20000; i++) {
+                stmt.addBatch("INSERT INTO userinfo (username, age) VALUES ('yu" + i +"', 18)");
+            }
+
+            stmt.executeBatch();
+            // 提交事务
+            conn.commit();
+            long endTime = System.currentTimeMillis();
+
+            System.out.println("插入两万条数据, 耗时: " + (endTime - startTime) + " ms毫秒");
+        } catch (ClassNotFoundException e) {
+            e.printStackTrace();
+        } catch (SQLException e) {
+            e.printStackTrace();
+        } finally {
+            // 关闭连接, 后开的先关
+            if (resultSet != null) {
+                try {
+                    resultSet.close();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            }
+            if (stmt != null) {
+                try {
+                    stmt.close();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            }
+            if (conn != null) {
+                try {
+                    conn.close();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
+    }
+}
+```
+
+#### 事务 (一组要么同时执行成功,要么同时执行失败的sql语句.是数据库操作的一个执行单元)
 * CallableStatement
