--- a/note/10.md
+++ b/note/10.md
@@ -37,14 +37,19 @@ public class test01 {
 #### Statement接口 (用于执行静态sql语句并返回它所生成结果的对象)
 > userinfo.sql (测试表userinfo)
 ```mysql
-CREATE DATABASE IF NOT EXISTS jdbcTest DEFAULT CHARSET utf8 COLLATE utf8_general_ci;
+CREATE DATABASE IF NOT EXISTS jdbcTest
+  DEFAULT CHARSET utf8
+  COLLATE utf8_general_ci;
 USE jdbcTest;
 CREATE TABLE userinfo (
-  id INT PRIMARY KEY AUTO_INCREMENT,
+  id       INT PRIMARY KEY AUTO_INCREMENT,
   username VARCHAR(20),
-  age      TINYINT UNSIGNED
-) ENGINE = InnoDB
-DEFAULT CHARSET utf8;
+  age      TINYINT UNSIGNED,
+  regTime  DATE,
+  lastLoginTime TIMESTAMP
+)
+  ENGINE = InnoDB
+  DEFAULT CHARSET utf8;
 ```
 * Statement (sql未预编译,容易引起sql注入)
 > eg:
@@ -235,4 +240,704 @@ public class test05 {
 ```
 
 #### 事务 (一组要么同时执行成功,要么同时执行失败的sql语句.是数据库操作的一个执行单元)
+* 原子性
+    表示一个事务内的所有操作是一个整体,要么全部成功,要么全部失败
+* 一致性
+    表示事务内如果有一个操作失败, 所有更改过的数据都必须回滚到修改前的状态
+* 隔离性
+    事务查看数据时数据所处的状态，要么是另一个事务修改它之前的状态，要么是另一个事务修改它之后的状态，事务不会查看中间状态的数据。
+    * 读取未提交
+    * 读取已提交
+    * 可重复读
+    * 序列化
+* 持久性
+    持久性的事务完成之后，它对系统的影响是永久性的
+
+> eg:
+```java
+/**
+ * Created by Echo
+ * 事务概念（ACID特点、隔离级别、提交Commit、回滚Rollback）
+ */
+public class test06 {
+
+    public static void main(String[] args) {
+        Connection conn = null;
+        PreparedStatement ps1 = null;
+        PreparedStatement ps2 = null;
+        ResultSet resultSet = null;
+        try {
+            Class.forName("com.mysql.jdbc.Driver");
+            conn = DriverManager.getConnection("jdbc:mysql://localhost:3306/jdbcTest?useUnicode=true&characterEncoding=UTF-8", "root", "root");
+
+            // jdbc中默认自动提交事务(true)
+            conn.setAutoCommit(false);
+            ps1 = conn.prepareStatement("INSERT INTO userinfo (username, age) VALUES (?, ?)");
+
+            ps1.setObject(1, "老毛");
+            ps1.setObject(2, 19);
+            ps1.execute();
+            System.out.println("插入一个用户=老毛");
+            // 休息2s
+            Thread.sleep(2000);
+            // 1. 多插入了一个参数,报错: java.sql.SQLException: No value specified for parameter 3
+            // 2. 此时事务回滚,不会向数据库插入数据
+            ps2 = conn.prepareStatement("INSERT INTO userinfo (username, age) VALUES (?, ?, ?)");
+
+            ps2.setObject(1, "老张");
+            ps2.setObject(2, 19);
+            ps2.execute();
+            System.out.println("插入一个用户=老张");
+
+            conn.commit();
+        } catch (ClassNotFoundException e) {
+            e.printStackTrace();
+            try {
+                conn.rollback();
+            } catch (SQLException e1) {
+                e1.printStackTrace();
+            }
+        } catch (InterruptedException e) {
+            e.printStackTrace();
+        } catch (SQLException e) {
+            e.printStackTrace();
+        } finally {
+            // 关闭连接, 后开的先关
+            if (resultSet != null) {
+                try {
+                    resultSet.close();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            }
+            if (ps1 != null) {
+                try {
+                    ps1.close();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            }
+            if (conn != null) {
+                try {
+                    conn.close();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
+    }
+}
+```
+
+#### 时间类型 (java.util.Date)
+* java.sql.Date (表示年月日)
+* java.sql.Time (表示时分秒)
+* java.sql.Timestamp (表示年月日时分秒)
+> eg:
+```java
+/**
+ * Created by Echo
+ * 时间处理（Date和Time以及Timestamp区别、随机日期）
+ */
+public class test07 {
+
+    public static void main(String[] args) {
+        Connection conn = null;
+        PreparedStatement ps = null;
+        ResultSet resultSet = null;
+        try {
+
+            Class.forName("com.mysql.jdbc.Driver");
+            conn = DriverManager.getConnection("jdbc:mysql://localhost:3306/jdbcTest?useUnicode=true&characterEncoding=UTF-8", "root", "root");
+
+            // 表中字段类型 `regTime` date, `lastLoginTime` timestamp
+            String sql = "INSERT INTO userinfo (username, regTime, lastLoginTime) VALUES (?, ?, ?)";
+            ps = conn.prepareStatement(sql);
+
+            ps.setObject(1, "李四");
+            // java.sql.Date
+            Date date1 = new Date(System.currentTimeMillis());
+            ps.setDate(2, date1);
+
+            // 如果需要插入指定日期可以使用 Calendar, DateFormat
+            Timestamp stamp = new Timestamp(System.currentTimeMillis());
+            ps.setTimestamp(3, stamp);
+
+            ps.execute();
+
+        } catch (ClassNotFoundException e) {
+            e.printStackTrace();
+        } catch (SQLException e) {
+            e.printStackTrace();
+        } finally {
+            // 关闭连接, 后开的先关
+            if (resultSet != null) {
+                try {
+                    resultSet.close();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            }
+            if (ps != null) {
+                try {
+                    ps.close();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            }
+            if (conn != null) {
+                try {
+                    conn.close();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
+    }
+}
+```
+
+> eg:
+```java
+/**
+ * Created by Echo
+ * 时间操作（时间段和日期段查询）
+ */
+public class test08 {
+
+    /**
+     * 将字符串代表的日期转换成long数值(格式yyyy-MM-DD hh:mm:ss)
+     * @param dateStr
+     * @return
+     */
+    public static long str2Date (String dateStr) {
+        DateFormat format = new SimpleDateFormat("yyyy-MM-dd hh:mm:ss");
+        try {
+            return format.parse(dateStr).getTime();
+        } catch (ParseException e) {
+            e.printStackTrace();
+            return 0;
+        }
+    }
+
+    public static void main(String[] args) {
+        Connection conn = null;
+        PreparedStatement ps = null;
+        ResultSet resultSet = null;
+        try {
+
+            Class.forName("com.mysql.jdbc.Driver");
+            conn = DriverManager.getConnection("jdbc:mysql://localhost:3306/jdbcTest?useUnicode=true&characterEncoding=UTF-8", "root", "root");
+
+            ps = conn.prepareStatement("SELECT * FROM userinfo WHERE regTime > ? AND regTime < ?");
+
+            Date startDate = new Date(str2Date("2015-4-13 10:23:45"));
+            Date endDate = new Date(str2Date("2018-4-13 00:00:00"));
+
+            ps.setObject(1, startDate);
+            ps.setObject(2, endDate);
+
+            resultSet = ps.executeQuery();
+            while (resultSet.next()) {
+                System.out.println(resultSet.getInt("id") + "--" + resultSet.getString("username"));
+            }
+
+        } catch (ClassNotFoundException e) {
+            e.printStackTrace();
+        } catch (SQLException e) {
+            e.printStackTrace();
+        } finally {
+            // 关闭连接, 后开的先关
+            if (resultSet != null) {
+                try {
+                    resultSet.close();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            }
+            if (ps != null) {
+                try {
+                    ps.close();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            }
+            if (conn != null) {
+                try {
+                    conn.close();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
+    }
+}
+```
+
+#### CLOB(Character Large Object)文本大对象操作 
+* 用于存储大量的文本数据
+* 大字段有些特殊, 不同数据库处理的方式不一样, 大字段的操作常常是以流的方式来处理的. 而非一般的字段 一次即可以读出数据。
+> 增加myinfo(text)字段 存储大文本
+```mysql
+ALTER TABLE jdbcTest.userinfo ADD myinfo TEXT NULL;
+```
+
+> eg:
+```java
+/**
+ * Created by Echo
+ * CLOB文本大对象操作
+ */
+public class test09 {
+
+    public static void main(String[] args) {
+        Connection conn = null;
+        PreparedStatement ps = null;
+        ResultSet resultSet = null;
+        Reader r = null;
+        try {
+
+            Class.forName("com.mysql.jdbc.Driver");
+            conn = DriverManager.getConnection("jdbc:mysql://localhost:3306/jdbcTest?useUnicode=true&characterEncoding=UTF-8", "root", "root");
+
+            ps = conn.prepareStatement("INSERT INTO userinfo (username, myinfo) VALUES (?, ?)");
+
+            ps.setString(1, "老鱼");
+            // 1. 导入本地文件
+            // ps.setClob(2, new FileReader(new File("/Users/yuhuayang/Study/icoolxue/coreJava/resouces/test.txt")));
+
+            // 2. 将程序中的字符串输入到数据库的CLOB字段中
+            ps.setClob(2, new BufferedReader(new InputStreamReader(new ByteArrayInputStream("test view".getBytes()))));
+
+            ps.executeUpdate();
+            // 3. 从数据库中读取CLOB字段
+            ps = conn.prepareStatement("SELECT * FROM userinfo WHERE id = ?");
+            ps.setInt(1, 3);
+            resultSet = ps.executeQuery();
+            while (resultSet.next()) {
+                Clob c = resultSet.getClob("myinfo");
+                r = c.getCharacterStream();
+                int temp = 0;
+                while ((temp = r.read()) != -1) {
+                    System.out.print((char) temp);
+                }
+            }
+
+        } catch (ClassNotFoundException e) {
+            e.printStackTrace();
+        } catch (Exception e) {
+            e.printStackTrace();
+        } finally {
+            if (r != null) {
+                try {
+                    r.close();
+                } catch (IOException e) {
+                    e.printStackTrace();
+                }
+            }
+            // 关闭连接, 后开的先关 (ResultSet -> PreparedStatement -> Connection)
+            if (resultSet != null) {
+                try {
+                    resultSet.close();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            }
+            if (ps != null) {
+                try {
+                    ps.close();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            }
+            if (conn != null) {
+                try {
+                    conn.close();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
+    }
+}
+```
+
+#### BLOB(Binary Large Object)二进制大对象操作 
+* 用于存储大量的二进制数据
+> 增加 headImg(BLOB)字段
+```mysql
+ALTER TABLE jdbcTest.userinfo ADD headImg BLOB NULL;
+```
+> eg:
+```java
+/**
+ * Created by Echo
+ * BLOB二进制大对象的使用
+ */
+public class test10 {
+
+    public static void main(String[] args) {
+        Connection conn = null;
+        PreparedStatement ps = null;
+        ResultSet resultSet = null;
+        InputStream is = null;
+        OutputStream out = null;
+        try {
+
+            Class.forName("com.mysql.jdbc.Driver");
+            conn = DriverManager.getConnection("jdbc:mysql://localhost:3306/jdbcTest?useUnicode=true&characterEncoding=UTF-8", "root", "root");
+
+            ps = conn.prepareStatement("INSERT INTO userinfo (username, headImg) VALUES (?, ?)");
+
+            // 1. 插入图片
+            ps.setString(1, "老李");
+            ps.setBlob(2, new FileInputStream("/Users/yuhuayang/Study/icoolxue/coreJava/resouces/1.jpg"));
+
+            ps.execute();
+            // 2. 读取图片
+            ps = conn.prepareStatement("SELECT * FROM userinfo WHERE id = ?");
+            ps.setInt(1, 9);
+            resultSet = ps.executeQuery();
+            while (resultSet.next()) {
+                Blob b = resultSet.getBlob("headImg");
+                is = b.getBinaryStream();
+                out = new FileOutputStream("/Users/yuhuayang/Study/icoolxue/coreJava/resouces/haha.jpg");
+                int temp = 0;
+                while ((temp = is.read()) != -1) {
+                    out.write(temp);
+                }
+            }
+
+        } catch (ClassNotFoundException e) {
+            e.printStackTrace();
+        } catch (Exception e) {
+            e.printStackTrace();
+        } finally {
+            if (out != null) {
+                try {
+                    out.close();
+                } catch (IOException e) {
+                    e.printStackTrace();
+                }
+            }
+            if (is != null) {
+                try {
+                    is.close();
+                } catch (IOException e) {
+                    e.printStackTrace();
+                }
+            }
+            // 关闭连接, 后开的先关 (ResultSet -> PreparedStatement -> Connection)
+            if (resultSet != null) {
+                try {
+                    resultSet.close();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            }
+            if (ps != null) {
+                try {
+                    ps.close();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            }
+            if (conn != null) {
+                try {
+                    conn.close();
+                } catch (SQLException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
+    }
+}
+```
+
+#### 简单封装、资源文件Properties处理连接信息
+> jdbcUtil
+```java
+/**
+ * Created by Echo on 11/3/17.
+ * jdbc工具类
+ */
+public class JDBCUtil {
+
+    static Properties pros = null; // 可以帮助我们读取资源文件中的信息
+
+    // 只有在加载JDBCUtil类的时候调用
+    static {
+        pros = new Properties();
+
+        try {
+            pros.load(Thread.currentThread().getContextClassLoader().getResourceAsStream("db.properties"));
+        } catch (IOException e) {
+            e.printStackTrace();
+        }
+    }
+
+    public static Connection getMysqlConn() {
+        String driver = pros.getProperty("mysqlDriver");
+        String url = pros.getProperty("mysqlURL");
+        String username = pros.getProperty("mysqlUser");
+        String pwd = pros.getProperty("mysqlPwd");
+
+        try {
+            Class.forName(driver);
+            return DriverManager.getConnection(url, username, pwd);
+        } catch (Exception e) {
+            e.printStackTrace();
+            return null;
+        }
+    }
+
+    public static void close(ResultSet rs, Statement stmt, Connection conn) {
+        if (rs != null) {
+            try {
+                rs.close();
+            } catch (SQLException e) {
+                e.printStackTrace();
+            }
+        }
+        if (stmt != null) {
+            try {
+                stmt.close();
+            } catch (SQLException e) {
+                e.printStackTrace();
+            }
+        }
+        if (conn != null) {
+            try {
+                conn.close();
+            } catch (SQLException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+
+    public static void close(Statement stmt, Connection conn) {
+        if (stmt != null) {
+            try {
+                stmt.close();
+            } catch (SQLException e) {
+                e.printStackTrace();
+            }
+        }
+        if (conn != null) {
+            try {
+                conn.close();
+            } catch (SQLException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+
+    public static void close(Connection conn) {
+        if (conn != null) {
+            try {
+                conn.close();
+            } catch (SQLException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+
+}
+```
+> db.properties
+```
+mysqlDriver=com.mysql.jdbc.Driver
+mysqlURL=jdbc:mysql://localhost:3306/jdbcTest?useUnicode=true&characterEncoding=UTF-8
+mysqlUser=root
+mysqlPwd=root
+```
+> eg:
+```java
+/**
+ * Created by Echo
+ * 代码总结（简单封装、资源文件Properties处理连接信息）
+ */
+public class Demo11 {
+
+    public static void main(String[] args) {
+        Connection conn = null;
+        PreparedStatement ps = null;
+        ResultSet resultSet = null;
+        try {
+
+            conn = JDBCUtil.getMysqlConn();
+            ps = conn.prepareStatement("SELECT * FROM userinfo");
+
+            resultSet = ps.executeQuery();
+            while (resultSet.next()) {
+                System.out.println(resultSet.getString("username"));
+            }
+
+        } catch (Exception e) {
+            e.printStackTrace();
+        } finally {
+            JDBCUtil.close(resultSet, ps, conn);
+        }
+    }
+}
+```
+
+#### ORM(Object Relationship Mapping)原理[使用Object数组存储一条记录]
+* 表结构跟类对应: 表中字段和类的属性对应, 表中记录和对象对应
+* 让javabean的属性名和类型尽量和数据库保持一致
+* 一条记录对应一个对象,将这些查询到的对象放到容器中(List、Set、Map)
+
+> 数据库schema
+```mysql
+CREATE TABLE emp (
+  id       INT(10) PRIMARY KEY AUTO_INCREMENT,
+  empname  VARCHAR(20),
+  salary   DOUBLE,
+  birthday DATE,
+  age      INT,
+  deptId   INT(10)
+)
+  ENGINE = InnoDB
+  DEFAULT CHARSET utf8;
+
+CREATE TABLE dept (
+  id     INT(10) PRIMARY KEY AUTO_INCREMENT,
+  dname  VARCHAR(30),
+  address VARCHAR(30)
+)
+  ENGINE = InnoDB
+  DEFAULT CHARSET utf8;
+```
+> eg:
+```java
+/**
+ * Created by Echo
+ * 使用Object[]来封装一条记录
+ * 使用List<Object[]>存储多条记录
+ */
+public class Demo12 {
+
+    public static void main(String[] args) {
+        Connection conn = null;
+        PreparedStatement ps = null;
+        ResultSet resultSet = null;
+        List<Object[]> resultList = new ArrayList<Object[]>();
+        try {
+
+            conn = JDBCUtil.getMysqlConn();
+            ps = conn.prepareStatement("SELECT empname, salary, age FROM emp WHERE id > ?");
+            ps.setInt(1, 1);
+            resultSet = ps.executeQuery();
+            while (resultSet.next()) {
+                // 1. 使用Object[]来封装一条记录
+                Object[] objs = new Object[3];
+                // System.out.println(resultSet.getString(1) + resultSet.getDouble(2) + resultSet.getInt(3));
+                objs[0] = resultSet.getObject(1);
+                objs[1] = resultSet.getObject(2);
+                objs[2] = resultSet.getObject(3);
+                // 2. 使用List<Object[]>存储多条记录
+                resultList.add(objs);
+            }
+
+        } catch (Exception e) {
+            e.printStackTrace();
+        } finally {
+            JDBCUtil.close(resultSet, ps, conn);
+        }
+
+        for (Object[] item : resultList) {
+            System.out.println(item[0] + "---" + item[1] + "---" + item[2]);
+        }
+    }
+}
+```
+#### 使用Map来封装一条记录
+> eg:
+```java
+/**
+ * Created by Echo
+ * 使用Map来封装一条记录
+ * 使用List<Map>存储多条记录
+ * 使用Map<String, Map>存储多条记录 //TODO
+ */
+public class Demo13 {
+
+    public static void main(String[] args) {
+        Connection conn = null;
+        PreparedStatement ps = null;
+        ResultSet resultSet = null;
+        List<Map<String, Object>> resultList = new ArrayList<Map<String, Object>>();
+        try {
+
+            conn = JDBCUtil.getMysqlConn();
+            ps = conn.prepareStatement("SELECT empname, salary, age FROM emp WHERE id > ?");
+            ps.setInt(1, 1);
+            resultSet = ps.executeQuery();
+            while (resultSet.next()) {
+                // 1. 使用Map来封装一条记录
+                Map<String, Object> row = new HashMap<String, Object>();
+                row.put("empname", resultSet.getObject(1));
+                row.put("salary", resultSet.getObject(2));
+                row.put("age", resultSet.getObject(3));
+                // 2. 使用List<Map>存储多条记录
+                resultList.add(row);
+            }
+
+        } catch (Exception e) {
+            e.printStackTrace();
+        } finally {
+            JDBCUtil.close(resultSet, ps, conn);
+        }
+
+        for (Map<String, Object> row : resultList) {
+            for (String key : row.keySet()) {
+                System.out.print(key + " - " + row.get(key) + '\t');
+            }
+            System.out.println();
+        }
+    }
+}
+```
+
+#### 使用JavaBean来封装一条记录
+> eg:
+```java
+/**
+ * Created by Echo
+ * 使用JavaBean来封装一条记录
+ * 使用List<JaveBean>存储多条记录
+ */
+public class Demo14 {
+
+    public static void main(String[] args) {
+        Connection conn = null;
+        PreparedStatement ps = null;
+        ResultSet resultSet = null;
+        List<Emp> resultList = new ArrayList<Emp>();
+        try {
+
+            conn = JDBCUtil.getMysqlConn();
+            ps = conn.prepareStatement("SELECT empname, salary, age FROM emp WHERE id > ?");
+            ps.setInt(1, 1);
+            resultSet = ps.executeQuery();
+            while (resultSet.next()) {
+                // 1. 使用JavaBean来封装一条记录
+                Emp emp = new Emp(resultSet.getString("empname"), resultSet.getDouble("salary"), resultSet.getInt("age"));
+                // 2. 使用List<JavaBean>存储多条记录
+                resultList.add(emp);
+            }
+
+        } catch (Exception e) {
+            e.printStackTrace();
+        } finally {
+            JDBCUtil.close(resultSet, ps, conn);
+        }
+
+        for (Emp item : resultList) {
+            System.out.println(item.getEmpname() + "---" + item.getSalary() + "---" + item.getAge());
+        }
+    }
+}
+```
+#### java调用存储过程
 * CallableStatement
