--- a/note/7.md
+++ b/note/7.md
@@ -104,3 +104,182 @@ public @interface MyAnnotation02 {
 }
 ```
 
+#### JVM核心机制（类加载过程、JVM内存分析、反射机制核心原理、常量池理解）
+
+#### 类加载机制
+> 加载 －> 链接 －> 初始化
+
+#### JVM核心机制（类加载过程、初始化、主动引用、被动引用、静态初始化块执行顺序
+
+#### JVM核心机制（类加载器、三种类加载器、代理加载模式、双亲委派机制）
+* 引导类加载器(bootstrap class loader)
+* 扩展类加载器 (extensions class loader)
+* 应用程序类加载器 (application class loader)
+* 自定义类加载器 
+
+#### JVM核心机制（类加载器、自定义文件系统类加载器、网络自定义类加载器）
+* 继承 java.lang.ClassLoader
+
+#### JVM核心机制（类加载器、自定加密解密类加载器）
+
+#### JVM核心机制（线程上下文类加载器、Web服务器类加载机制、OSGI模块开发原理）
+* 线程上下文类加载器 (为了抛弃双亲委派加载链模式)
+```java
+Thread.currentThread.getContextClassLoader();
+Thread.currentThread.setContextClassLoader();
+```
+```java
+线程上下文类加载器测试
+```
+* tomcat服务器的类加载机制
+* OSGI原理(面相Java的动态模块系统)
+```java
+A B C
+```
+
+#### 内部类分类介绍（静态内部类详解、成员内部类详解）
+* 内部类(Nested Class) 嵌套类
+    * 静态内部类
+    * 非静态内部类
+```java
+public class Demo1 {
+
+    // 静态内部类
+    private static class StaticNestedClass {
+
+    }
+    // 普通内部类(成员内部类)
+    private class FieldInnerClass {
+
+    }
+
+    void sayHello() {
+        // 方法内部类(局部内部类)
+        class LocalClass {
+            
+        }
+
+        // 匿名内部类
+        Runnable runnable = new Runnable() {      // 1. 定义了匿名内部类的类型
+            // 2. 创建了匿名内部类的一个实例
+            @Override
+            public void run() {
+
+            }
+        };
+
+    }
+}
+```
+> class文件命名方式: Demo1$StaticNestedClass
+
+* 静态内部类的基本用法
+    * 静态内部类可以包含静态成员、非静态成员
+    * 静态内部类可以直接调用外部类的静态属性、静态方法，但不能调用外部类的普通属性、普通方法
+    * 在不相关的类中, 可以直接创建静态内部类的对象(不需要通过所在外部类)
+    * 静态内部类实际上和外部类联系很少，也就是命名空间上的联系
+```java
+public class Demo2 {
+
+    int c = 5;
+    static int d = 10;
+
+    // 静态内部类
+    private static class StaticInnerClass {
+        int a = 3;
+        static int b = 5;
+
+        public void test() {
+            System.out.println(d);
+            // 静态内部类不能
+            System.out.println(c);
+        }
+    }
+}
+```
+```java
+public class Demo3 {
+
+    public static void main(String[] args) {
+        
+        Outer01.StaticInnerClass osic1 = new Outer01. StaticInnerClass();
+
+        StaticInnerClass osic2 = new StaticInnerClass();
+    }
+}
+
+public class Outer01 {
+
+    int c = 5;
+    static int d = 10;
+
+    // 静态内部类
+    static class StaticInnerClass {
+        int a = 3;
+        static int b = 5;
+
+        public void test() {
+            System.out.println(d);
+            // 静态内部类不能
+            System.out.println(c);
+        }
+    }
+}
+```
+* 成员内部类的基本用法
+    * 成员内部类就像一个成员变量一样存在于外部类
+    * 成员内部类可以访问外部类的所有成员(包含: private的)
+    * 成员内部类的this指内部类对象本身,要拿到内部类对象可以使用
+    外部类名+.this
+        * 成员内部类的对象是一定要绑定到一个外部类的对象上的，
+        因此，创建成员内部类对象时需要持有外部类对象的引用，因此要先有外部类对象，后有成员内部类对象。
+    * 成员内部类不能有静态成员
+* 成员内部类对象的创建方式
+    * 外部类内部
+    ```java
+    Inner inner = new Inner();
+    ```
+    * 外部类外部 
+    ```java
+    Inner inner = new Outer.new Inner();
+    ```
+    
+```java
+public class Demo04 {
+    public static void main(String[] args) {
+
+        Outer02 out = new Outer02();
+        Outer02.InnerClass ic = out.new InnerClass();
+        ic.test();
+    }
+}
+class Outer02 {
+
+    private int a = 3;
+    int b = 10;
+
+    public void test() {
+        InnerClass ic = new InnerClass();
+    }
+
+    // 成员内部类
+    class InnerClass {
+        int c = 1;
+        
+        // 成员内部类不能有静态成员或方法, 除非声明未final
+        // final static int d = 80; 
+        // final static Date date = new Date(); // 编译器无法在编译期确定其值
+        void test() {
+            System.out.println(a);
+            // 成员内部类对象的创建，必须先有外部类对象
+            System.out.println("内部类对象" + this);
+            // 引用了外部类的对象
+            System.out.println("外部类对象" + Outer02.this);
+        }
+    }
+}
+```
+
+
+
+
